samples/_failures_safe/1761500148_45d2dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45c3591e.c: In function ‘main’:
./samples/SAFE/__tmp_45c3591e.c:178:5: error: expected expression at end of input
  178 |     if (fgets(input, sizeof
      |     ^~
./samples/SAFE/__tmp_45c3591e.c:178:9: error: too few arguments to function ‘fgets’
  178 |     if (fgets(input, sizeof
      |         ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_45c3591e.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_45c3591e.c:178:5: error: expected declaration or statement at end of input
  178 |     if (fgets(input, sizeof
      |     ^~
